[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=2,<3" ]

[project]
name = "fast-zero"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
  { name = "Alison Americo", email = "alisonlira@proton.me" },
]
requires-python = ">=3.14,<4.0"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "fastapi[standard]>=0.128,<0.129",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
taskipy = "^1.14.1"
ruff = "^0.12.11"

[tool.ruff]
line-length = 79
extend-exclude = [ "migrations" ]

format.preview = true
format.quote-style = "single"
lint.select = [ "E", "F", "I", "PL", "PT", "W" ]
lint.preview = true

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev fast_zero/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'
